# stock-market-dashboard

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f4909c369ca_create_asset_and_watchlist_tables.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  asset.py
backend/app/routers/: __init__.py  assets.py  watchlist.py
backend/app/schemas/: __init__.py  asset.py
backend/app/services/: __init__.py  cache.py  crypto_service.py  stock_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AssetCard.tsx  AssetSearch.tsx  MarketIndicators.tsx  PriceChart.tsx  WatchlistView.tsx
frontend/src/hooks/: useAssetData.ts  useAssetHistory.ts  useAssetSearch.ts  useWatchlist.ts
frontend/src/pages/: AssetDetail.tsx  Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: start-backend.sh
